gccida/g2/simplify_subreg
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_subreg/src/simplify-rtx.c:2942:23: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  simplify_subreg( machine_mode outermode, rtx op, machine_mode innermode, unsigned int byte) 
                      ^
                      enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_subreg/src/simplify-rtx.c:2942:55: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  simplify_subreg( machine_mode outermode, rtx op, machine_mode innermode, unsigned int byte) 
                                                      ^
                                                      enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_subreg/src/simplify-rtx.c:3023:86: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( v8 == ( ( ( unsigned int)target_flags & 0x2000000) == 0 ? 4 : 8) && v16 > v8 && mode_class_0[v15] == MODE_INT ) 
                                                                                     ^~~~~~~~~~~~
                                                                                     mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_subreg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_subreg/src/simplify-rtx.c:3046:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v35 = ( int)op[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_subreg/src/simplify-rtx.c:3063:53: error: use of undeclared identifier 'machine_mode'
rtx = simplify_subreg( outermode, op->fld[0].rtx, ( machine_mode)*( ( unsigned __int8 *)rtx + 2), v10); 
                                                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_subreg/src/simplify-rtx.c:3088:21: error: assigning to 'uint32' (aka 'unsigned int') from incompatible type 'struct rtx_def'
*( _DWORD *)&rtx[1] = op[1]; 
                    ^ ~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_subreg/src/simplify-rtx.c:3116:24: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v29.rtwint = ( __int64)op[1]; 
                       ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_subreg/src/simplify-rtx.c:3118:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v29.rtwint = ( __int64)op->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_subreg/src/simplify-rtx.c:3120:46: error: use of undeclared identifier 'machine_mode'
rtx = simplify_subreg( outermode, v29.rtx, ( machine_mode)*( unsigned __int8 *)( v29.rtwint + 2), v30); 
                                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_subreg/src/simplify-rtx.c:3131:24: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v19.rtwint = ( __int64)op[1]; 
                       ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_subreg/src/simplify-rtx.c:3133:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v19.rtwint = ( __int64)op[1].fld[0]; 
                       ^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_subreg/src/simplify-rtx.c:3141:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v19.rtwint = ( __int64)op->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_subreg/src/simplify-rtx.c:3142:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[v15] != MODE_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_subreg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_subreg/src/simplify-rtx.c:3151:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[v40] != MODE_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_subreg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
14 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_subreg/src/obj/simplify-rtx.o] Error 1
